hphp/test/zend/good/tests-classes/protected_001.php.exp
Call fail()
HipHop Fatal error: Call to protected method pass::fail from anonymous context in hphp/test/zend/good/tests-classes/protected_001.php on line 14
